tests/test_if/test2.wacc
# if condition type mismatch

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  if yo[34] then
    skip 
  else 
    skip
  fi
end
